[gd_scene load_steps=16 format=3 uid="uid://dbwwkk2lo6n1u"]

[ext_resource type="Script" path="res://entities/player/meat/player.gd" id="1_ukk7d"]
[ext_resource type="Texture2D" uid="uid://dmyiyhbiv2e54" path="res://assets/entities/meat.png" id="3_h47v7"]
[ext_resource type="Shader" path="res://assets/blood.gdshader" id="4_4rq8x"]
[ext_resource type="Texture2D" uid="uid://j62k70plt7i8" path="res://assets/blood_noise.tres" id="4_7xsrt"]
[ext_resource type="Texture2D" uid="uid://bw5gvws1r7agw" path="res://assets/entities/meat_bloody.png" id="6_15sqc"]
[ext_resource type="PackedScene" uid="uid://js1bpqxxd18t" path="res://tools/hit-and-hurt-boxes/hurtbox.tscn" id="6_jgqc7"]
[ext_resource type="PackedScene" uid="uid://re0isefnqy5a" path="res://entities/player/meat/gun.tscn" id="6_l3amo"]
[ext_resource type="PackedScene" uid="uid://dknqm6lu3g8os" path="res://entities/player/meat/fist.tscn" id="7_83ml1"]
[ext_resource type="Script" path="res://tools/damage-manager/damage_manager.gd" id="7_i625j"]
[ext_resource type="Shader" path="res://entities/player/moe/health.gdshader" id="8_wbss7"]
[ext_resource type="AnimationLibrary" uid="uid://bg0k3lqo0t2nk" path="res://entities/player/meat/meat_animations.res" id="9_juyhy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pfjri"]
radius = 2.0
height = 8.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_etbls"]
shader = ExtResource("4_4rq8x")
amount = 0.0
noise = ExtResource("4_7xsrt")

[sub_resource type="CircleShape2D" id="CircleShape2D_k7ruj"]
radius = 5.09902

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3l3cy"]
shader = ExtResource("8_wbss7")
amp = 0.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 3
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_ukk7d")
accel = 400.0
frict = 700.0
regen_rate = 0.5
blood_reduce_rate = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_pfjri")

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 20.0

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("3_h47v7")
hframes = 6
vframes = 2

[node name="Blood" type="Sprite2D" parent="Sprite"]
material = SubResource("ShaderMaterial_etbls")
texture = ExtResource("6_15sqc")
hframes = 6
vframes = 2

[node name="Weapons" type="Node2D" parent="Sprite"]

[node name="Gun" parent="Sprite/Weapons" instance=ExtResource("6_l3amo")]

[node name="Fist" parent="Sprite/Weapons" instance=ExtResource("7_83ml1")]

[node name="Shadow" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = -1

[node name="Collision" type="Node2D" parent="."]

[node name="Hurtbox" parent="Collision" instance=ExtResource("6_jgqc7")]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision/Hurtbox"]
shape = SubResource("CircleShape2D_k7ruj")

[node name="TeleportRayCast" type="RayCast2D" parent="Collision"]

[node name="DamageManager" type="Node" parent="."]
script = ExtResource("7_i625j")
hurtbox_path = NodePath("../Collision/Hurtbox")
is_enemy = false

[node name="Timers" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Health" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_3l3cy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"meat_animations": ExtResource("9_juyhy")
}

[connection signal="dead" from="DamageManager" to="." method="_on_damage_manager_dead"]
